setting login and logout methods.

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -14,6 +14,11 @@ user_login:
     controller:  App\Controller\User\AuthController::login
     methods: POST|GET
 
+user_logout:
+    path: /user/logout
+    controller: App\Controller\User\AuthController::login
+    methods: POST
+
 home:
     path: /
     controller: App\Controller\AppController
