--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -19,6 +19,9 @@ security:
             form_login:
                 login_path: user_login
                 check_path: user_login
+                username_parameter: _email
+            logout:
+                path: user_logout
 
 
             # activate different ways to authenticate
