--- a/app/composer.json
+++ b/app/composer.json
@@ -20,6 +20,7 @@
         "symfony/security-bundle": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
         "symfony/validator": "6.4.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.4.*"
     },
     "config": {
