--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -33,6 +33,14 @@ RUN adduser -D -u $UID -G webgroup user
 # Set access rights to the directories where Composer will be installed
 RUN chown -R user:webgroup /usr/local/bin
 
+# Install xdebug
+RUN apk add --update linux-headers \
+    && apk add --no-cache $PHPIZE_DEPS \
+    && pecl install xdebug-3.3.0 \
+    && docker-php-ext-enable xdebug
+
+COPY docker/php/xdebug.ini $PHP_INI_DIR/conf.d/xdebug.ini
+
 USER user
 
 WORKDIR /var/www/html
