--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - .env
     ports:
       - '${FORWARD_APP_PORT:-80}:80'
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
       - ./app:/var/www/html
       - ./docker/nginx:/etc/nginx/conf.d
