--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -1,18 +1,36 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
+                property: email
+        admin_user_provider:
+            entity:
+                class: App\Entity\AdminUser
                 property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        admin:
+            lazy: true
+            pattern: ^/(admin)(?!/login)
+            provider: admin_user_provider
+            form_login:
+                login_path: admin_app_login
+                check_path: admin_app_login
+                username_parameter: _email
+                password_parameter: _password
+                # where to redirect after success login
+                default_target_path: admin_home
+#            custom_authenticators:
+#                - App\Security\AdminAuthenticator
+            logout:
+                path: admin_app_logout
+                # where to redirect after logout
+                target: admin_app_login
         main:
             lazy: true
             provider: app_user_provider
@@ -22,18 +40,10 @@ security:
                 username_parameter: _email
             logout:
                 path: user_logout
-
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+                target: user_login
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
