--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     avatars_directory: '%kernel.project_dir%/public/uploads/avatars'
+    torrents_directory: '%kernel.project_dir%/public/uploads/torrents'
 
 services:
     # default configuration for services in *this* file
