--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
       - .env
     ports:
       - '${FORWARD_APP_PORT:-80}:80'
-    extra_hosts:
-      - host.docker.internal:host-gateway
     volumes:
       - ./app:/var/www/html
       - ./docker/nginx:/etc/nginx/conf.d
@@ -28,8 +26,12 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      PHP_IDE_CONFIG: "serverName=Docker"
     volumes:
       - "./app:/var/www/html"
+    extra_hosts:
+      - host.docker.internal:host-gateway
     depends_on:
       - db
       - nginx
