--- a/app/.env.example
+++ b/app/.env.example
@@ -20,11 +20,11 @@ APP_SECRET=1f29a25042cfcdd19a7eb0d8667c79dc
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL=pgsql://bittracker:bittracker@db:5432/bittracker
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=redis://redis-db:6379/messages
+###< symfony/messenger ###
+
+DEFAULT_REDIS_PROVIDER=redis://redis-db:6379
