--- a/app/composer.json
+++ b/app/composer.json
@@ -13,12 +13,15 @@
         "easycorp/easyadmin-bundle": "^4.9",
         "knplabs/knp-paginator-bundle": "^6.4",
         "symfony/asset": "6.4.*",
+        "symfony/cache": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/messenger": "6.4.*",
         "symfony/mime": "6.4.*",
+        "symfony/redis-messenger": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
         "symfony/translation": "6.4.*",
