--- a/app/composer.json
+++ b/app/composer.json
@@ -21,6 +21,7 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/messenger": "6.4.*",
         "symfony/mime": "6.4.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/redis-messenger": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
