--- a/app/composer.json
+++ b/app/composer.json
@@ -8,9 +8,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.9",
+        "fzaninotto/faker": "^1.5",
         "knplabs/knp-paginator-bundle": "^6.4",
         "symfony/asset": "6.4.*",
         "symfony/cache": "6.4.*",
