--- a/app/.gitignore
+++ b/app/.gitignore
@@ -5,3 +5,12 @@ var
 public/bundles
 public/build
 public/uploads
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
