--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -1,7 +1,6 @@
 [xdebug]
 zend_extension=xdebug
-;xdebug.mode=develop,coverage,debug,profile
+xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.discover_client_host=1
-;xdebug.client_host=host.docker.internal
-;xdebug.client_port=9000
+xdebug.client_port=9000
