sending messages via rabbit

--- a/app/.env.example
+++ b/app/.env.example
@@ -25,6 +25,8 @@ DATABASE_URL=pgsql://bittracker:bittracker@db:5432/bittracker
 
 ###> symfony/messenger ###
 MESSENGER_TRANSPORT_DSN=redis://redis-db:6379/messages
+RABBITMQ_URL=amqp://user:password@rabbit-mq:5672
+RABBITMQ_VHOST=/
 ###< symfony/messenger ###
 
 DEFAULT_REDIS_PROVIDER=redis://redis-db:6379
