--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,8 @@ POSTGRES_USER=bittracker
 POSTGRES_PASSWORD=bittracker
 POSTGRES_DB=bittracker
 
+RABBIT_USER=user
+RABBIT_PASSWORD=password
+
 UID=1000
 GID=1000
