--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "easycorp/easyadmin-bundle": "^4.9",
         "fzaninotto/faker": "^1.5",
         "knplabs/knp-paginator-bundle": "^6.4",
+        "symfony/amqp-messenger": "6.4.*",
         "symfony/asset": "6.4.*",
         "symfony/cache": "6.4.*",
         "symfony/console": "6.4.*",
