--- a/app/config/packages/messenger.yaml
+++ b/app/config/packages/messenger.yaml
@@ -1,17 +1,21 @@
 framework:
     messenger:
-        # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        # failure_transport: failed
-
         transports:
-            # https://symfony.com/doc/current/messenger.html#transport-configuration
-             async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+          torrent_swarm:
+              dsn: '%env(RABBITMQ_URL)%'
+              options:
+                queues:
+                  torrent_swarm:
+                    flags: '%amqp_durable%'
+                    binding_keys: [swarm]
+                exchange:
+                  name: torrent_swarm
+                  type: direct
+                  default_publish_routing_key: swarm
 
         routing:
             # Route your messages to the transports
-             'App\Message\TorrentSwarm': async
+             'App\Message\TorrentSwarm': torrent_swarm
 
 # when@test:
 #    framework:
