--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,20 @@ services:
       - REDIS_PORT=6379
     networks:
       - bittracker
+  rabbitmq:
+    image: rabbitmq:4.0.2-management
+    working_dir: /app
+    hostname: rabbit-mq
+    ports:
+      - 15672:15672
+      - 5672:5672
+    environment:
+      RABBITMQ_DEFAULT_USER: '${RABBIT_USER}'
+      RABBITMQ_DEFAULT_PASS: '${RABBIT_PASSWORD}'
+    volumes:
+      - "./data/rabbit:/var/lib/rabbitmq/mnesia/"
+    networks:
+      - bittracker
 networks:
   bittracker:
     driver: bridge
