--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     container_name: '${PROJECT_NAME}_db'
     volumes:
       - ./data/db:/var/lib/postgresql/data
+      - ./data/dump:/dump
     restart: always
     env_file:
       - .env
@@ -49,6 +50,22 @@ services:
       POSTGRES_DB: '${POSTGRES_DB}'
     ports:
       - '${FORWARD_DB_PORT}:${FORWARD_DB_PORT}'
+    networks:
+      - bittracker
+  test-db:
+    image: postgres:14.7-alpine
+    container_name: '${PROJECT_NAME}_test-db'
+    volumes:
+      - ./data/dump/dump.sql:/docker-entrypoint-initdb.d/dump.sql
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: '${POSTGRES_USER}'
+      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
+      POSTGRES_DB: '${POSTGRES_DB}'
+    ports:
+      - '${FORWARD_TEST_DB_PORT}:${FORWARD_TEST_DB_PORT}'
     networks:
       - bittracker
   redis-db:
@@ -68,8 +85,8 @@ services:
     working_dir: /app
     hostname: rabbit-mq
     ports:
-      - 15672:15672
-      - 5672:5672
+      - 15673:15672
+      - 5673:5672
     environment:
       RABBITMQ_DEFAULT_USER: '${RABBIT_USER}'
       RABBITMQ_DEFAULT_PASS: '${RABBIT_PASSWORD}'
