--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -1,6 +1,7 @@
-[xdebug]
-zend_extension=xdebug
+;[xdebug]
+;zend_extension=xdebug
 xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.discover_client_host=1
 xdebug.client_port=9000
+;xdebug.client_host=tracker.loc
