--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
       POSTGRES_DB: '${POSTGRES_DB}'
     ports:
-      - '${FORWARD_DB_PORT}:${FORWARD_DB_PORT}'
+      - '${FORWARD_DB_PORT}:5432'
     networks:
       - bittracker
   test-db:
@@ -63,9 +63,9 @@ services:
     environment:
       POSTGRES_USER: '${POSTGRES_USER}'
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
-      POSTGRES_DB: '${POSTGRES_DB}'
+      POSTGRES_DB: '${POSTGRES_DB}_test'
     ports:
-      - '${FORWARD_TEST_DB_PORT}:${FORWARD_TEST_DB_PORT}'
+      - '${FORWARD_TEST_DB_PORT}:5432'
     networks:
       - bittracker
   redis-db:
