--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -4,4 +4,5 @@ xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.discover_client_host=1
 xdebug.client_port=9000
+xdebug.mode=coverage
 ;xdebug.client_host=tracker.loc
