--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
 PROJECT_NAME=bittracker
 
-FORWARD_APP_PORT=8000
+FORWARD_APP_PORT=8001
 FORWARD_DB_PORT=5432
+FORWARD_TEST_DB_PORT=5435
 
 POSTGRES_USER=bittracker
 POSTGRES_PASSWORD=bittracker
 POSTGRES_DB=bittracker
+
+BASE_USER=bittracker
+BASE_PASSWORD=bittracker
 
 RABBIT_USER=user
 RABBIT_PASSWORD=password
