--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,6 +5,8 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
     location ~ \.php$ {
+        auth_basic "Restricted Area";
+        auth_basic_user_file /etc/nginx/.htpasswd;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass app:9000;
